# efl-config

./: CMakeLists.txt  ConfigSingle.hpp  LICENSE  README.md  config_single.hpp
include/efl/: Config.hpp  Undefs.hpp
single-include/: ConfigSingle.hpp
